--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zeeone-store",
+  "name": "Galuh-store",
   "version": "3.0.0",
   "description": "Bot WhatsApp Khusus Store atau Jualan, berisi fitur-fitur grup seperti addlist, antilink,kick, dan lainnya.",
   "main": "index.js",
